更新至生成证书结束
更新至生成证书结束

--- a/苹果开发者账号维护指导手册.md
+++ b/苹果开发者账号维护指导手册.md
@@ -97,6 +97,7 @@ Members have access to membership benefits, but have limited responsibilities.
 ### [](#1.4 证书生成)1.4 证书生成
 
 开发者证书分为两种类型：Development Certificate(开发证书)和Production Certificate(发布证书)，一定要分别申请两次，有些网上的说明只是建议说分别申请，实际是必须分别申请，否则在真机调试和发布的时候会碰到一些问题。完整的证书生成过程分四步：从苹果电脑上申请CSR文件、生成根证书，添加应用id以及生成provision profile。
+以下为生产环境为例，测试环境的证书生产与生产环境类似。只是在注册AppID的时候需要绑定可测试手机的UDID。
 
 #### [](#1.4.1 从苹果电脑上申请CSR文件)1.4.1 从苹果电脑上申请CSR文件
 
@@ -172,13 +173,64 @@ Members have access to membership benefits, but have limited responsibilities.
 
 #### [](#1.4.3 添加应用)1.4.3 添加应用id
 
-有了根证书后，下一步应该做的就是注册自己的应用。这里以已用的bunlderId为com.testteam.test来说明。
+有了根证书后，下一步应该做的就是注册自己的应用。这里以bunlderId为com.myteam.test来说明。
 
 进入Certificates, Identifiers & Profiles后选择“App IDs”
 
 ![图27](https://pingju020.github.io/assets/images/apple-id-manager/app_ids.png  "图27")
 
+选择右上角的“＋”按钮，进入App ID添加：
+
+![图28](https://pingju020.github.io/assets/images/apple-id-manager/input_app_name.png  "图28")
+
+![图29](https://pingju020.github.io/assets/images/apple-id-manager/input_bundleId@2x.png  "图29")
+
+如上面两张图所示，分别填写app的名称和Bundle ID，勾选需要的Application Services后点continue，进入下图：
+
+![图30](https://pingju020.github.io/assets/images/apple-id-manager/conform_id@2x.png  "图30")
+
+确认没有问题后，点Generate，再选择Done。添加App ID结束。添加完成后的效果如下：
+
+![图31](https://pingju020.github.io/assets/images/apple-id-manager/app_id_overview@2x.png  "图31")
+
+** 注：Application Services一般情况下使用Push Notifications就好， 如果游戏类应用的话需要勾选Game Center，使用钱包功能的需要包含Wallet，以此类推。另外，如果添加App ID时Application Services勾选不对也可以通过Edit再编辑 **
+
 #### [](#1.4.4 生成provision profile)1.4.4 生成provision profile
+
+provision profile是跟应用一一对应起来的，所以一定要注册过App ID后才能生成对应的provision profile来。
+
+* 进入provision profile的Distribution目录
+在Certificates, Identifiers & Profiles页面选择“Provisioning Profiles”下的“Distribution”，如图所示：
+
+![图32](https://pingju020.github.io/assets/images/apple-id-manager/provision_overview@2x.png  "图32")
+
+* 选择右上角的“＋”按钮,进入Add iOS Provisioning Profiles页面：
+选择Distribution 下的 “In House”后 continue。
+
+![图33](https://pingju020.github.io/assets/images/apple-id-manager/provision_overview@2x.png  "图33")
+
+* 进入Select App ID页面。
+点击如下图中紫框，选择之前添加的test(XXXXXX.com.myteam.test)的app，continue。
+
+![图34](https://pingju020.github.io/assets/images/apple-id-manager/select_app@2x.png  "图34")
+
+* 进入Select certificates页面，如下图示，选择之前添加好的根证书，continue。
+
+![图35](https://pingju020.github.io/assets/images/apple-id-manager/select_cer@2x.png  "图35")
+
+* 进入Name this Profile and generate页面，如下图示，在标注红色下划线的文本框内填入profile的名字，如此出使用“test”。
+
+![图36](https://pingju020.github.io/assets/images/apple-id-manager/profile_name@2x.png  "图36")
+
+填写完成后，点击“Generate”按钮。
+
+* 进入profile查看页，如下图。
+
+![图37](https://pingju020.github.io/assets/images/apple-id-manager/downprofile@2x.png  "图37")
+
+直接在此处download，将profile文件下载到本机，然后双击安装到电脑即可用来打包应用。
+
+
 ### [](#1.4 证书维护)1.4 证书维护
 #### [](#1.4.1 provision profile 过期)1.4.1 provision profile 过期
 #### [](#1.4.2 根证书过期)1.4.2 根证书过期
