跟新至企业账号介绍完
跟新至企业账号介绍完

--- a/苹果开发者账号维护指导手册.md
+++ b/苹果开发者账号维护指导手册.md
@@ -193,7 +193,8 @@ Members have access to membership benefits, but have limited responsibilities.
 
 ![图31](https://pingju020.github.io/assets/images/apple-id-manager/app_id_overview@2x.png  "图31")
 
-** 注：Application Services一般情况下使用Push Notifications就好， 如果游戏类应用的话需要勾选Game Center，使用钱包功能的需要包含Wallet，以此类推。另外，如果添加App ID时Application Services勾选不对也可以通过Edit再编辑 **
+
+** 注：Application Services一般情况下使用Push Notifications就好， 如果游戏类应用的话需要勾选Game Center，使用钱包功能的需要包含Wallet，以此类推。另外，如果添加App ID时Application Services勾选不对也可以通过Edit再编辑。 **
 
 #### [](#1.4.4 生成provision profile)1.4.4 生成provision profile
 
@@ -207,7 +208,7 @@ provision profile是跟应用一一对应起来的，所以一定要注册过App
 * 选择右上角的“＋”按钮,进入Add iOS Provisioning Profiles页面：
 选择Distribution 下的 “In House”后 continue。
 
-![图33](https://pingju020.github.io/assets/images/apple-id-manager/provision_overview@2x.png  "图33")
+![图33](https://pingju020.github.io/assets/images/apple-id-manager/in_house@2x.png  "图33")
 
 * 进入Select App ID页面。
 点击如下图中紫框，选择之前添加的test(XXXXXX.com.myteam.test)的app，continue。
@@ -230,51 +231,74 @@ provision profile是跟应用一一对应起来的，所以一定要注册过App
 
 直接在此处download，将profile文件下载到本机，然后双击安装到电脑即可用来打包应用。
 
+### [](#1.5 证书维护)1.5 证书维护
 
-### [](#1.4 证书维护)1.4 证书维护
-#### [](#1.4.1 provision profile 过期)1.4.1 provision profile 过期
-#### [](#1.4.2 根证书过期)1.4.2 根证书过期
+Apple 企业账号的证书制作一般开发人员都能胜任。但是维护就相对比较复杂了。这里涉及到最主要的问题是Apple对企业账号的使用限制。
 
-## [](#二、公司账号)二、公司账号
-### [](#2.1 账号申请)2.1 账号申请
-### [](#2.2 成员管理)2.2 成员管理
-### [](#2.3 证书生成)2.3 证书生成
-#### [](#2.3.1 添加应用)2.3.1 添加应用id
-#### [](#2.3.2 生成根证书)2.3.2 生成根证书
-#### [](#2.3.3 生成provision profile)2.3.3 生成provision profile
-### [](#2.4 证书维护)2.4 证书维护
-#### [](#2.4.1 provision profile 过期)1.4.1 provision profile 过期
-#### [](#2.4.2 根证书过期)2.4.2 根证书过期
-## [](#三、个人开发者账号)三、个人开发者账号
-### [](#1.1 账号申请)1.1 账号申请
-### [](#1.2 成员管理)1.2 成员管理
-### [](#1.3 证书生成)1.3 证书生成
-#### [](#1.3.1 添加应用)1.3.1 添加应用id
-#### [](#1.3.2 生成根证书)1.3.2 生成根证书
-#### [](#1.3.3 生成provision profile)1.3.3 生成provision profile
-### [](#1.4 证书维护)1.4 证书维护
-#### [](#1.4.1 provision profile 过期)1.4.1 provision profile 过期
-#### [](#1.4.2 根证书过期)1.4.2 根证书过期
+首先区别于个人开发者账号和公司开发者账号，企业账号具有如下特点：
+
+* 价格比个人账号和公司账号更贵，为 299$/年
+* 不可以提交应用到 App Store 商店
+* 可以将签名后的应用在任何 iOS 设备上安装，且没有安装数量的限制
+
+其中，正是由于第3条的特点，给开发者在测试和分发 App 时，带来了极大的便利。所以，一般开发者申请使用苹果企业账号（或苹果企业签名），也是为了这个特点。
+
+但是，因为苹果对于 App 的安装有着非常严格的限制，所以苹果对企业账号的使用也给出了种种严格的条款，详见：Apple Developer - Terms and Agreements 。其中，最重要的条款是：
+
+' 使用企业账号签名后的应用，只可以用于企业内部员工安装，不可以公开下载。 '
+
+因为这些条件的限制，苹果的企业账号使用上也是有诸多限制。比如，企业根证书的有效期只有3年，而每个应用的provision profile的有效期仅1年。一旦发布的企业应用，根证书或者provision profile中任何一个过了有效期，便可导致该应用彻底无法启动。
+
+所以证书维护，其实涉及以下方面： **provision profile 替换** 、**根证书替换** 以及 **防止账号被封**。
+
+#### [](#1.5.1 provision profile 替换)1.5.1 provision profile 替换
+provision profile过期后，已经安装的使用该pofile的应用将无法启动。所以要保证应用的正常使用就要按照如下方法来做好提前替换的工作。
+
+* provision profile的有效期**最多**为1年(**注：小于1年的情况实际是系统根证书的有效期不足1年导致的，即，如果根证书的有效期只有半年，此时依赖此根证书生成的provision profile 文件有效期也只有半年**)。
+* **应用的开发者**和**企业账号的管理者**，均要谨记app使用的provision profile文件有效期准确时间。
+* 提前(建议预留一个月的时间)规划好替换证书的版本，且该版本要要求强制升级。
+
+**tips:** 防止忘记provision profile的过期时间的比较实用的方法是，将证书命名加上过期时间，如下图所示：
+
+![图38](https://pingju020.github.io/assets/images/apple-id-manager/profile_date@2x.png  "图38")
+
+图中标注的20170506和20180620就是分别表示证书的过期时间。这样每次打包前，确认证书等配置时，就能清楚看到profile的过期时间。
+
+#### [](#1.5.2 根证书替换)1.5.2 根证书替换
+
+根证书的有效期比profile要长很多。但是也正因为长，反而容易被忽略。
+而根证书一旦过期，所有使用该证书的应用将全部不可用。只能重新发布新的证书的包替换。
+应用的开发者因为只留神在自己的应用上，且根证书的有效期会限制profile的有效期，所以开发者一般比较容易忽略根证书。
+
+所以对于根证书的替换，建议如下操作：
+
+* 账号的持有者需要谨记证书的有效期。
+
+* 在证书到期前提前（建议至少一两个月）创建新的证书，以及涉及的所有应用的provision profile。
+
+* 联系各个应用开发者，将新的根证书的P12文件和新的profile文件交给应用开发者，提醒他们规划替换证书的版本。
+
+* 同样提醒他们，这个版本应该在证书到期前一个月上线，而且必须是强制升级。
+
+#### [](#1.5.3 防止账号被封)1.5.3 防止账号被封
+
+很多开发者在违背了苹果对企业账号的限制条款后，导致企业账号被封，从而造成了不小的损失。所以，为了应用的正常使用建议做到如下几点：
+
+1. 尽量不要将应用公开上传到蒲公英等平台发布；
+2. 不要将应用的安装链接公开，做到只在企业内部安装使用；
+3. p12 证书文件和 Provisioning Profile 文件不要随意导入导出，最好做到专人专机；
+4. 开发者账号千万不能外借；
+5. 不要将 p12 证书文件和 Provisioning Profiles 文件上传到第三方打包平台；
+6. 测试的时候最好在企业内部网络进行，如果需要连接 Internet 的话，请注意网络环境不要发生太大的变化；
+7. 网络电话VOIP、积分墙、游戏充值平台等类型的 App 都很容易被苹果封号；
+8. **尽量将应用发布到App Store**
 
 
-### [](#1.1 @property的本质)1.1 @property的本质
-@property = ivar(实例变量)+getter + setter（存取方法）
+#### [](#1.5.4 一些异常情况)1.5.3 一些异常情况
 
-“属性” (property)作为 Objective-C 的一项特性，主要的作用就在于封装对象中的数据。 Objective-C 对象通常会把其所需要的数据保存为各种实例变量。实例变量一般通过“存取方法”(access method)来访问。其中，“获取方法” (getter)用于读取变量值，而“设置方法” (setter)用于写入变量值。这个概念已经定型，并且经由“属性”这一特性而成为 Objective-C 2.0 的一部分。 而在正规的 Objective-C 编码风格中，存取方法有着严格的命名规范。 正因为有了这种严格的命名规范，所以 Objective-C 这门语言才能根据名称自动创建出存取方法。
+*  账号下已经存在两个根证书，且都有绑定应用。
+*  provision profile 已经过期
+*  证书被误删
+*  账号到期未及时续费
 
-也可以说:@property = getter + setter;
 
-### [](#1.2 ivar、getter、setter 是如何生成并添加到这个类中的?)1.2 ivar、getter、setter 是如何生成并添加到这个类中的?
-完成属性定义后，编译器会自动编写访问这些属性所需的方法，此过程叫做“自动合成”(autosynthesis)。除了生成方法代码 getter、setter 之外，编译器还要自动向类中添加适当类型的实例变量，并且在属性名前面加下划线，以此作为实例变量的名字。
-
-### [](#1.3 @protocol 和 category 中如何使用 @property)1.3 @protocol 和 category 中如何使用 @property
-在 protocol 中使用 property 只会生成 setter 和 getter 方法声明,我们使用属性的目的,是希望遵守我协议的对象能实现该属性
-
-category 使用 @property 也是只会生成 setter 和 getter 方法的声明,如果我们真的需要给 category 增加属性的实现,需要借助于运行时的两个函数：
-
-1，objc_setAssociatedObject
-
-2，objc_getAssociatedObject
-
-### [](#1.4 ARC下，不显式指定任何属性关键字时，默认的关键字都有哪些？)1.4 ARC下，不显式指定任何属性关键字时，默认的关键字都有哪些？
- **线程安全的**：atomic、nonatomic
