添加示意图
添加示意图

--- a/苹果开发者账号维护指导手册.md
+++ b/苹果开发者账号维护指导手册.md
@@ -280,6 +280,11 @@ provision profile过期后，已经安装的使用该pofile的应用将无法启
 
 * 同样提醒他们，这个版本应该在证书到期前一个月上线，而且必须是强制升级。
 
+有一个比较实用的方法就是管理员自己有一个专业的证书存储目录。里面分文件夹存储各个应用的根证书和provision profile文件，文件夹的命名加上证书过期时间，如下图：
+
+![图39](https://pingju020.github.io/assets/images/apple-id-manager/certifications@2x.png  "图39")
+
+
 #### [](#1.5.3 防止账号被封)1.5.3 防止账号被封
 
 很多开发者在违背了苹果对企业账号的限制条款后，导致企业账号被封，从而造成了不小的损失。所以，为了应用的正常使用建议做到如下几点：
