添加角色示意图
添加角色示意图

--- a/苹果开发者账号维护指导手册.md
+++ b/苹果开发者账号维护指导手册.md
@@ -93,6 +93,10 @@ Admins serve as a secondary contact for teams and have many of the same responsi
 Available only to developers enrolled as an organization
 Members have access to membership benefits, but have limited responsibilities.
 
+各种角色权限的范围如下图所示：
+
+  ![角色范围](https://pingju020.github.io/assets/images/apple-id-manager/roles@2x.png  "角色范围")
+ ![角色范围](https://pingju020.github.io/assets/images/apple-id-manager/roles2@2x.png  "角色范围")
 
 ### [](#1.4 证书生成)1.4 证书生成
 
