尝试图片相对路径
尝试图片相对路径

--- a/苹果开发者账号维护指导手册.md
+++ b/苹果开发者账号维护指导手册.md
@@ -286,7 +286,7 @@ provision profile过期后，已经安装的使用该pofile的应用将无法启
 
 有一个比较实用的方法就是管理员自己有一个专业的证书存储目录。里面分文件夹存储各个应用的根证书和provision profile文件，文件夹的命名加上证书过期时间，如下图：
 
-![图39](https://pingju020.github.io/assets/images/apple-id-manager/certifications@2x.png  "图39")
+![图39](assets/images/apple-id-manager/certifications@2x.png  "图39")
 
 
 #### [](#1.5.3 防止账号被封)1.5.3 防止账号被封
@@ -309,5 +309,6 @@ provision profile过期后，已经安装的使用该pofile的应用将无法启
 *  provision profile 已经过期
 *  证书被误删
 *  账号到期未及时续费
+
 
 
